@@ -1,7 +1,9 @@
 <li class="kchild" data-source="{gensource}">
     <div class="kel kcopyFrom krecursion" data-domid="{domId}">
         <span class="kel-bg krecursion">&nbsp;</span>
-        <span class="kname">{connector1}{name}{connector2}</span>
+        {connector1}
+        <span class="kname">{name}</span>
+        {connector2}
         <em class="karrow ktype">=</em>
         <span><span>&#8734;&nbsp;&nbsp;</span>{normal}</span>
         <em class="ktype">(recursion)</em>
