@@ -24,6 +24,10 @@
             <label class="koptionright">
                 <input class="ksearchlong" type="checkbox" autocomplete="off" name="searchlong" value="searchlong" checked="checked">Search long results
             </label>
+            <br/>
+			<label class="koptionleft">
+				<input class="ksearchwhole" type="checkbox" autocomplete="off" name="searchwhole" value="searchwhole">Search whole values
+			</label>
         </div>
     </div>
 </div>
