@@ -1,7 +1,9 @@
 <li class="kchild" data-source="{gensource}">
     <div class="kel {expand} {type-classes}">
         <span class="kel-bg {type-classes}">&nbsp;</span>
-        <span class="kname">{connector1}{name}{connector2}</span>
+        {connector1}
+        <span class="kname">{name}</span>
+        {connector2}
         <em class="karrow ktype">=</em>
         <span class="kshort">{normal}</span>
         <em class="ktype">({type})</em>
