@@ -1,6 +1,7 @@
 <li class="kchild" data-source="{gensource}">
   <div class="kel kexpand {isExpanded} {ktype} " data-addjson='{addjson}'>
-    <span class="kname">{name}<em class="karrow ktype">=></em></span>
+    <span class="kname">{name}</span>
+    <em class="karrow ktype">=></em>
     <span>{additional}</span>
     <em class="ktype">({type})</em>
     {connector2}
