@@ -1,6 +1,7 @@
 <li class="kchild" data-source="{gensource}">
   <div class="kel kcopyFrom krecursion" data-domid="{domId}" data-addjson='{addjson}'>
-    <span class="kname">{name}<em class="karrow ktype">=></em></span>
+    <span class="kname">{name}</span>
+    <em class="karrow ktype">=></em>
     <span><span>&#8734;&nbsp;&nbsp;</span>{normal}</span>
     <em class="ktype">(recursion)</em>
   </div>
